feat: implementação CRUD completo de oportunidades e usuarios